--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ fabric.properties
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-go_wkhtmltopdf_linux
+receipt_handler
 *.zip
 wkhtmltopdf
 wkhtmltoimage
